--- a/my-portfolio/styles/Articles.scss
+++ b/my-portfolio/styles/Articles.scss
@@ -1,5 +1,6 @@
 #writing {
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   background-color: #553566;
   padding: 1em 3em;
   display: flex;
@@ -24,6 +25,7 @@
     margin: 0;
     flex-grow: 1; // Allow list to take up available space
     justify-content: center;
+    align-items: center;
   }
 }
 
@@ -58,7 +60,11 @@
 
       h3 {
         font-weight: 300;
-        font-size: 1rem;
+        font-size: clamp(
+          0.5rem,
+          1.5vw + 0.3rem,
+          1rem
+        ); //min, responsiveness, max
       }
 
       &:hover {
