--- a/my-portfolio/styles/Projects.scss
+++ b/my-portfolio/styles/Projects.scss
@@ -1,6 +1,7 @@
 #projects {
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   width: 90vw;
   margin: 1.5em 1em 0em;
   align-items: center;
@@ -9,6 +10,9 @@
 
   h2 {
     padding-left: 0.5em;
+
+    font-size: clamp(3rem, 4vw + 0.5rem, 5rem);
+
     font-size: 5em;
     width: 45vw;
     padding-right: 1em;
@@ -66,10 +70,10 @@
     h3 {
       margin: 0.2em 0; // Adjust vertical margin, remove horizontal margin
       word-break: break-word; // Allow long project names to break
-      font-size: 1em;
+      font-size: clamp(0.2rem, 4vw + 0.2rem, 1.2rem);
     }
     p {
-      font-size: 0.9em;
+      font-size: clamp(0.2rem, 4vw + 0.2rem, 0.9rem);
       line-height: 1.4;
       margin-top: 0.5em;
     }
